--- a/channel/channelapp/i18n/french.po
+++ b/channel/channelapp/i18n/french.po
@@ -201,8 +201,8 @@ msgstr "Réseau non initialisé"
 
 #: source/m_main.c:81
 #, c-format
-msgid "Your Wii's IP is %u.%u.%u.%u"
-msgstr "L'IP de votre Wii est %u.%u.%u.%u"
+msgid "Your Wii's IP is:"
+msgstr "L'IP de votre Wii est:"
 
 # button text
 #: source/m_main.c:97
@@ -210,8 +210,11 @@ msgid "About"
 msgstr "À propos de"
 
 #: source/m_main.c:102
-msgid "Launch BootMii"
-msgstr "Lancer BootMii"
+msgid "Launch BootMii IOS"
+msgstr "Lancer BootMii IOS"
+
+msgid "Launch Priiloader"
+msgstr "Lancer Priiloader"
 
 #: source/m_main.c:106
 msgid "Exit to System Menu"
