--- a/channel/channelapp/i18n/german.po
+++ b/channel/channelapp/i18n/german.po
@@ -196,8 +196,8 @@ msgstr "Netzwerk nicht initialisiert"
 
 #: source/m_main.c:81
 #, c-format
-msgid "Your Wii's IP is %u.%u.%u.%u"
-msgstr "Die IP deiner Wii ist %u.%u.%u.%u"
+msgid "Your Wii's IP is"
+msgstr "Die IP deiner Wii ist:"
 
 # button text
 #: source/m_main.c:97
@@ -205,8 +205,11 @@ msgid "About"
 msgstr "Info"
 
 #: source/m_main.c:102
-msgid "Launch BootMii"
-msgstr "BootMii starten"
+msgid "Launch BootMii IOS"
+msgstr "BootMii IOS starten"
+
+msgid "Launch Priiloader"
+msgstr "Priiloader starten"
 
 #: source/m_main.c:106
 msgid "Exit to System Menu"
